--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <div class="card" id="flashcard">
                     <div class="card-face card-front">
                         <div class="card-content">
+                            <img id="card-image" src="" alt="Flashcard Illustration" class="hidden">
                             <span class="label">问题</span>
                             <h2 id="question-text">加载中...</h2>
                             <div class="hint">点击翻转查看答案</div>
